--- a/core/static/core/css/base.css
+++ b/core/static/core/css/base.css
@@ -127,7 +127,7 @@ html, body {
 /* content */
 /***********/
 
-/* header, footer */
+/* header */
 
 header {
   width: 100%;
@@ -177,130 +177,4 @@ header {
 .site__name {
   font-size: 32px;
   font-weight: 400;
-}
-
-/* login, sign-up */
-
-.login, .signup {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 40px 0;
-}
-
-.login__box, .signup__box {
-  width: 35%;
-  min-width: 320px;
-}
-
-.login__elem, .signup__elem {
-  display: block;
-  width: 100%;
-}
-
-.login .signup__box {
-  text-align: center;
-}
-
-.login .site {
-  padding-bottom: 40px;
-}
-
-.signup {
-
-}
-
-/* chat */
-
-.chat {
-  padding: 20px 60px;
-  height: calc(100% - 60px - 60px);
-  overflow: auto;
-  box-sizing: border-box;
-  /* flex */
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: flex-start; /* for not full width (like inline) */
-}
-
-/* message */
-
-.message {
-  max-width: 50%;
-  padding: 10px 20px;
-  background: #edeef0;
-  border-radius: 30px;
-  transition: background 0.2s linear;
-}
-
-.message-right {
-  align-self: flex-end;
-}
-
-.message:hover {
-  background: #47E8E7;
-}
-
-.message__author {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.message__time {
-  color: #586069;
-}
-
-.message-reverse {
-  flex-direction: row-reverse;
-}
-
-.message__text-reverse {
-  text-align: right;
-}
-
-/* input */
-
-.input {
-  padding: 10px 20px;
-  height: 60px;
-  box-sizing: border-box;
-  text-align: center;
-  background-color: #6360FF;
-}
-
-.input__elem {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.input__btn {
-  width: 30px;
-  height: 30px;
-  border: none;
-}
-
-.input__pic-attach {
-  background: url(/static/core/img/push-pin.svg/) no-repeat center;
-}
-
-.input__pic-send {
-  background: url(/static/core/img/right-arrow.svg/) no-repeat center;
-}
-
-.input__field {
-  background-color: #edeef0;
-  width: calc(100% - 60px - 60px);
-  height: 100%;
-  border-radius: 30px;
-  padding: 10px 20px;
-  box-sizing: border-box;
-}
-
-.input input {
-  outline: none;
-  border: none;
-  background-color: unset;
-  width: 100%;
 }
