--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -5,8 +5,13 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock %}</title>
-  <link href="{% static 'core/css/style.css' %}" type="text/css" rel="stylesheet">
+  <link href="{% static 'core/css/base.css' %}" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  {% block extra_styles %}
+  {% endblock extra_styles %}
+  <script src="{% static 'core/js/jquery.min.js' %}"></script>
+  {% block extra_scripts %}
+  {% endblock extra_scripts %}
 </head>
 <body>
   {% block header %}
