--- a/core/templates/core/chat.html
+++ b/core/templates/core/chat.html
@@ -25,9 +25,7 @@
   <form id="message__form" action="{% url 'core:send_view' %}" method="post">
     {% csrf_token %}
     <div class="input__elem input__btn mr-10 input__pic-attach"></div>
-    <div class="input__elem input__field">
-      <input type="text" value="" name="text" placeholder="Input message..." autocomplete="off"/>
-    </div>
+    <input type="text" value="" name="text" placeholder="Input message..." autocomplete="off" class="input__elem input__field"/>
     <button type="submit" class="input__elem input__btn ml-10 input__pic-send"></button>
   </form>
 {% endblock content %}
