Added attachments to messages, full AJAX support for sending and rendering messages

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   {% block extra_styles %}
   {% endblock extra_styles %}
-  {% render_bundle 'base' 'js' %}
-  {% render_bundle 'vendor' 'js' %}
+  {% render_bundle 'base' %}
+  {% render_bundle 'vendor' %}
   {% block extra_scripts %}
   {% endblock extra_scripts %}
 </head>
