--- a/core/static/core/css/chat.scss
+++ b/core/static/core/css/chat.scss
@@ -11,6 +11,22 @@
   align-items: flex-start; /* for not full width (like inline) */
 }
 
+.chat__empty {
+  margin: 0 auto;
+}
+
+.chat__empty-smiley {
+  margin: 20px auto 0 auto;
+  background: url(../img/sad.svg) no-repeat center;
+  width: 100px;
+  height: 100px;
+}
+
+.chat__empty-help {
+  font-size: 32px;
+  font-weight: 400;
+}
+
 .chat-panel {
   width: 35%;
   min-width: 200px;
@@ -47,8 +63,27 @@
   flex-direction: row-reverse;
 }
 
+.message__text {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 .message__text-reverse {
   text-align: right;
+}
+
+.message__attachment {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #4ACAFF;
+  border-radius: 30px;
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
+
+.message__attachment-content {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 // input
@@ -70,6 +105,10 @@
   width: 30px;
   height: 30px;
   border: none;
+}
+
+input[type="file"] {
+  display: none;
 }
 
 .input__pic-attach {
